src/tests/e2e/snapshots/zellij__tests__e2e__cases__quit_and_resurrect_session_with_viewport_serialization.snap
---
source: src/tests/e2e/cases.rs
assertion_line: 1273
expression: last_snapshot
---
 𝚅𝚒𝚋𝚎𝚌𝚛𝚊𝚏𝚝𝚎𝚍. (e2e-test)  Tab #1  Tab #2  Tab #3  Tab #4 
┌ Pane #1 ─────────────────────────────────────────────────┐┌ Pane #2 ─────────────────────────────────────────────────┐
│                                                          ││                                                          │
│$                                                         ││$                                                         │
│$                                                         ││$                                                         │
│                                                          ││                                                          │
│                            ┌ Pane #4 ────────────────────────────────────── PIN [ ] ┐                                │
│                            │                                                        │                                │
│                            │$┌ top ────────────────────────────────────────── PIN [ ] ┐                              │
│                            │$│                                                        │                              │
│                            │ │                                                        │ ┐                            │
│                            │ │                                                        │ │────────────────────────────┘
│                            │ │                  Waiting to run: top                   │ │────────────────────────────┐
│                            │ │                                                        │ │                            │
│                            │ │    <ENTER> run, <ESC> drop to shell, <Ctrl-c> exit     │ │                            │
│                            └─│                                                        │ │                            │
│                              │                                                        │ │                            │
│                              └─ <ENTER> run, <ESC> drop to shell, <Ctrl-c> exit ──────┘ │                            │
│                                │                                                        │                            │
│                                └────────────────────────────────────────────────────────┘                            │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT  BASE 
 (FLOATING PANES VISIBLE): Press Ctrl p, <w> to hide.                                                                   
